--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -40,6 +40,12 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+# brightness keys
+#bindsym XF86MonBrightnessUp exec brightnessctl -d acpi_video0 set +10%
+#bindsym XF86MonBrightnessDown exec brightnessctl -d acpi_video0 set 10%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +10%
+bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
